Ajustes btn portifólio

--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
 
     <section class="media-showcase">
       <div class="media-block">
-        <h4>Áudio (autoral)</h4>
+        <h4 style="padding: 10px;">Áudio</h4>
 
         <div class="spotify-player">
           <iframe style="border-radius:12px" src="https://open.spotify.com/embed/episode/068gNzrbdw79QMAL4mp7xG"
@@ -73,7 +73,7 @@
         </div>
       </div>
       <div class="media-block">
-        <h4>Vídeo Time-lapse</h4>
+        <h4  style="padding: 10px;">Vídeo Time-lapse</h4>
 
         <div class="yt-player">
           <iframe src="https://www.youtube.com/embed/ucpYgkqV8dw" title="YouTube video player" frameborder="0"
