Add vídeo autoral.

--- a/src/index.html
+++ b/src/index.html
@@ -76,10 +76,9 @@
         <h4  style="padding: 10px;">Vídeo Time-lapse</h4>
 
         <div class="yt-player">
-          <iframe src="https://www.youtube.com/embed/ucpYgkqV8dw" title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen>
-          </iframe>
+          <div class="video-player">
+            <video src="./img/TimeLapse.mp4" controls></video>
+          </div>
         </div>
       </div>
     </section>
